argo/constraints/require-pod-security-admission.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: audit-pod-security-admission
spec:
  enforcementAction: warn  # deny
  match:
    excludedNamespaces:
      # system exclusion
      - 'kube-*'
      - '*argocd*'
      - '*gatekeeper-system*'
    kinds:
      - apiGroups:
         - ""
        kinds:
          - Namespace
  parameters:
    message: "All namespaces must have an Pod Security Admission labels set: ['pod-security.kubernetes.io/enforce: restricted', 'pod-security.kubernetes.io/enforce-version: v1.27']"
    labels:
      - key: pod-security.kubernetes.io/enforce
        allowedRegex: restricted
      - key: pod-security.kubernetes.io/enforce-version
        allowedRegex: v1.27

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-pod-security-admission
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      # temporal exclusion until implemented
      - "security-admission"
      # system exclusion
      - 'kube-*'
      - '*argocd*'
      - '*gatekeeper-system*'
    kinds:
      - apiGroups:
         - ""
        kinds:
          - Namespace
  parameters:
    message: "All namespaces must have an Pod Security Admission labels set: ['pod-security.kubernetes.io/enforce: restricted', 'pod-security.kubernetes.io/enforce-version: v1.27']"
    labels:
      - key: pod-security.kubernetes.io/enforce
        allowedRegex: restricted
      - key: pod-security.kubernetes.io/enforce-version
        allowedRegex: v1.27
